[package]
name = "cargo-debug"
description = "a subcommand for cargo to launch a debugger with the generated output file"
version = "0.3.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
repository = "https://github.com/ryankurte/cargo-debug"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
structopt = "0.2.15"
log = "0.4.6"
simplelog = "0.5.3"
cargo_metadata = "0.7.4"
cargo-toml2 = "1.3.1"
ctrlc = { version="3.1.1", features=["termination"] }
